// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load Files Should convert complex sql account-levelisations.query.sql: account-levelisations.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "required": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "name": "levelisationId",
      "required": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "ids",
      "required": false,
      "type": Object {
        "items": Object {
          "type": "number",
        },
        "type": "array",
      },
    },
    Object {
      "name": "limit",
      "required": false,
      "type": Object {
        "type": "number",
      },
    },
    Object {
      "name": "offset",
      "required": false,
      "type": Object {
        "type": "number",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "levelisationId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "accountId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "installationId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Done",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "isAccepted",
      "type": Object {
        "optional": false,
        "type": "boolean",
      },
    },
    Object {
      "name": "generationStartReadOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "generationStartReadValue",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "generationEndReadOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "generationEndReadValue",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "generationPercentageSplit",
      "type": Object {
        "optional": true,
        "type": "number",
      },
    },
    Object {
      "name": "generationPayment",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "generationEnergy",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "exportStartReadOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "exportStartReadValue",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "exportEndReadOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "exportEndReadValue",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "exportPercentageSplit",
      "type": Object {
        "optional": true,
        "type": "number",
      },
    },
    Object {
      "name": "exportPayment",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "exportEnergy",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "totalPayment",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "vatPayment",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "cfrFitId",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql account-levelisations-set-bulk-update.query.sql: account-levelisations-set-bulk-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "ids",
      "required": false,
      "type": Object {
        "items": Object {
          "type": "number",
        },
        "type": "array",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.query.sql: accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "required": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "name": "ids",
      "required": false,
      "type": Object {
        "items": Object {
          "type": "number",
        },
        "type": "array",
      },
    },
    Object {
      "name": "limit",
      "required": false,
      "type": Object {
        "type": "number",
      },
    },
    Object {
      "name": "offset",
      "required": false,
      "type": Object {
        "type": "number",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Active",
          },
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Dispute",
          },
          Object {
            "type": "literal",
            "value": "Closed",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "firstName",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "lastName",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "email",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "address",
      "type": Object {
        "optional": undefined,
        "type": "string",
      },
    },
    Object {
      "name": "fitIds",
      "type": Object {
        "items": Object {
          "optional": false,
          "type": "string",
        },
        "type": "array",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.sql: accounts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql bacs.query.sql: bacs.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "quarter",
      "required": false,
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "perPage",
      "required": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "name": "offset",
      "required": false,
      "type": Object {
        "type": "string",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "fitId",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "name",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "amount",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "quarter",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "bankDetails",
      "type": Object {
        "optional": undefined,
        "type": "string",
      },
    },
    Object {
      "name": "addressLine1",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "addressLine2",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "addressLine3",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "postcode",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql contracts.sql: contracts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql delete-accounts.query.sql: delete-accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "type",
      "required": false,
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "FIT",
          },
          Object {
            "type": "literal",
            "value": "SEG",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "state",
      "required": false,
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Active",
          },
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Dispute",
          },
          Object {
            "type": "literal",
            "value": "Closed",
          },
        ],
        "type": "union",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "sourceSystemId",
      "type": Object {
        "optional": true,
        "type": "number",
      },
    },
    Object {
      "name": "customerId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql generation-read-data.query.sql: generation-read-data.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "installationId",
      "required": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "exportDateOn",
      "required": false,
      "type": Object {
        "type": "Date",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "dateOn",
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql installation-meter-update.query.sql: installation-meter-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "meterId",
      "required": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "removalDate",
      "required": false,
      "type": Object {
        "type": "unknown",
      },
    },
  ],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql installations.sql: installations.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql meter-reads.sql: meter-reads.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql rates-by-tarrif-ids.query.sql: rates-by-tarrif-ids.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "ids",
      "required": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "tariffId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "rate",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "name": "tariffCode",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "tariffType",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Export",
          },
          Object {
            "type": "literal",
            "value": "Generation",
          },
          Object {
            "type": "literal",
            "value": "SEG",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "endOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql read-create.query.sql: read-create.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "meterId",
      "required": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "reason",
      "required": false,
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "type",
      "required": false,
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Opening",
          },
          Object {
            "type": "literal",
            "value": "Closing",
          },
          Object {
            "type": "literal",
            "value": "Quarterly",
          },
          Object {
            "type": "literal",
            "value": "Meter Verification",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "dateOn",
      "required": false,
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "name": "submittedAt",
      "required": false,
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "value",
      "required": false,
      "type": Object {
        "type": "number",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "submittedAt",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql reads-by-account-id.query.sql: reads-by-account-id.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "required": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "offset",
      "required": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "name": "perPage",
      "required": false,
      "type": Object {
        "type": "string",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "msn",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "dateOn",
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Opening",
          },
          Object {
            "type": "literal",
            "value": "Closing",
          },
          Object {
            "type": "literal",
            "value": "Quarterly",
          },
          Object {
            "type": "literal",
            "value": "Meter Verification",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "reason",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "createdAt",
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "name": "updatedAt",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "sourceSystemId",
      "type": Object {
        "optional": true,
        "type": "number",
      },
    },
    Object {
      "name": "mpan",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql tariff-rates.sql: tariff-rates.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;
